Corrections graphiques globales...

--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -37,7 +37,7 @@
             <label class="nametitle nomcircuit">
                 <span class="glyphicon glyphicon-retweet"></span>
                 &nbsp;&nbsp;Nom du circuit&nbsp;&nbsp;</label>
-            <input class=" nameinput" id="circuit_name" name="circuit_name" placeholder="Titre du circuit">
+            <input class=" nameinput" id="circuit_name" disabled>
         </div>
         <div id="circuit">
             <img id="debut_circuit" src="{{ asset("/images/buttonlist.png") }}"/>
