--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -32,9 +32,11 @@
 <script type="text/javascript">
     var nowTemp = new Date();
     var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
-    $('#validation').datepicker({
+    var valid = $('#validation').datepicker({
         onRender: function (date) {
             return date.valueOf() < now.valueOf() ? 'disabled' : '';
         }
-    });
+    }).on('changeDate', function (ev) {
+                ev.hide();
+            });
 </script>
