--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path("delegations_recues_list") }}">
+                        <a href="{{ path("delegations_recues") }}">
                             <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             délégations reçues
                         </a>
