--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -2,7 +2,8 @@
 
 {% block content %}
     <div class="bloc_page">
-        <h1>Délégations</h1>
+        <h1>Délégats</h1>
+        {% set donnees = true %}
         {% include 'SesileDelegationsBundle:Default:liste.html.twig' %}
         <a href="{{ path('delegation_new') }}">Déléguer ses droits</a>
     </div>
