--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -6,4 +6,28 @@
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
         <a href="{{ path('classeur_new') }}">Créer un classeur</a>
     </div>
+    <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+    <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+    <script type="text/javascript">
+        $(".dtables").dataTable({
+            "oLanguage": {
+                "sSearch": "Rechercher&nbsp;:",
+                "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+                "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                "oPaginate": {
+                    "sFirst": "",
+                    "sPrevious": "",
+                    "sNext": "",
+                    "sLast": ""
+                }
+            },
+            "iDisplayLength": 5,
+            "sDom": 'ift<"footer_datatables"p>',
+            "aoColumnDefs": [
+                { "bSortable": false, "aTargets": [ 4, 5 ] }
+            ],
+            "sPaginationType": "full_numbers"
+        });
+    </script>
 {% endblock %}
