--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -4,7 +4,7 @@
     <div class="bloc_page">
         <div class="titre_page">
             <span class="glyphicon glyphicon-folder-open"></span>
-            &nbsp;&nbsp;&nbsp;Déposer un nouveau classeur
+            &nbsp;&nbsp;&nbsp;Créer un nouveau classeur
         </div>
         <br>
 
