--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -2,7 +2,10 @@
 
 {% block content %}
     <div class="bloc_page">
-        <h1>Liste des classeurs</h1>
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-list"></span>
+            &nbsp;&nbsp;&nbsp;Liste des classeurs
+        </div>
         {% include 'SesileClasseurBundle:Classeur:liste.html.twig' %}
         <a href="{{ path('classeur_new') }}">Créer un classeur</a>
     </div>
@@ -19,7 +22,9 @@
                     "sFirst": "",
                     "sPrevious": "",
                     "sNext": "",
-                    "sLast": ""
+                    "sLast": "",
+                    "sZeroRecords": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
+                    "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation "
                 }
             },
             "iDisplayLength": 5,
