--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -2,9 +2,39 @@
 
 {% block content %}
     <div class="bloc_page">
-        <h1>Délégats</h1>
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-export"></span>
+            &nbsp;&nbsp;&nbsp;Gérer les Délégations
+        </div>
         {% set donnees = true %}
         {% include 'SesileDelegationsBundle:Default:liste.html.twig' %}
         <a href="{{ path('delegation_new') }}">Déléguer ses droits</a>
     </div>
+    <script type="application/javascript" src="{{ asset("/datatables/jquery.dataTables.min.js") }}"></script>
+    <link type="text/css" href="{{ asset("/datatables/css/jquery.dataTables.css") }}" rel="stylesheet"/>
+    <script type="text/javascript">
+        $(".dtables").dataTable({
+            "oLanguage": {
+                "sSearch": "Rechercher&nbsp;:",
+                "sInfo": "Classeur  _START_ &agrave; _END_ sur _TOTAL_",
+                "sInfoEmpty": "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
+                "sInfoFiltered": "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+                "oPaginate": {
+                    "sFirst": "",
+                    "sPrevious": "",
+                    "sNext": "",
+                    "sLast": ""
+                },
+                "sZeroRecords": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation ",
+                "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation "
+            },
+            "iDisplayLength": 5,
+            "sDom": 'ift<"footer_datatables"p>',
+            "aoColumnDefs": [
+                { "bSortable": false, "aTargets": [ 4, 5 ] }
+            ],
+            "sPaginationType": "full_numbers"
+        });
+    </script>
 {% endblock %}
+
