--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -17,7 +17,7 @@
                     <li>
                         <a href="{{ path("classeur_new") }}">
                             <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
-                            Ajout d'un classeur
+                            Créer un classeur
                         </a>
                     </li>
                     <li>
@@ -74,18 +74,6 @@
                         <a href="{{ path("liste_users") }}">
                             <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
                             Liste des utilisateurs
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ path("liste_users") }}">
-                            <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                            Groupes
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ path("create_hierarchy") }}">
-                            <img class="arrows" src="{{ asset("/images/arrowgreen.png") }}"/>
-                            Hiérarchie
                         </a>
                     </li>
                 </ul>
