--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -1,23 +1,38 @@
 <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
 
-<div class="titre_form_element">Titre</div>
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Titre
+</div>
 <input class="form-control" id="name" name="name" placeholder="Nom">
 <br>
 
-<div class="titre_form_element">Description</div>
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Description
+</div>
 <textarea class="form-control" rows="3" name="desc" id="desc"></textarea>
 <br>
 
-<div class="titre_form_element">Date limite de validation</div>
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Date limite de validation
+</div>
 <input class="datepicker" id="validation" name="validation" type="datetime"/>
 <br>
 
-<div class="titre_form_element">Documents</div>
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Documents
+</div>
 <div id="documentcontent"></div>
 <br>
 
-<div class="titre_form_element">Circuit</div>
+<div class="titre_form_element">
+    <span class="glyphicon glyphicon-play"></span>
+    &nbsp;&nbsp;&nbsp;Circuit
+</div>
 <div id="circuitcontent"></div>
 <br>
 
@@ -32,11 +47,11 @@
 <script type="text/javascript">
     var nowTemp = new Date();
     var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
-    var valid = $('#validation').datepicker({
+    var dadapicker = $('#validation').datepicker({
         onRender: function (date) {
             return date.valueOf() < now.valueOf() ? 'disabled' : '';
         }
     }).on('changeDate', function (ev) {
-                ev.hide();
-            });
+                dadapicker.hide();
+            }).data('datepicker');
 </script>
