Développement de la partie upload suite à la signature

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -12,8 +12,8 @@
 
 <div class='pull-right' id="bouttons" style="display:none">
     <br/>
-    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-    <button type="button" class="btn btn-success">Signer et valider le classeur</button>
+    <button type="button"  class="btn btn-default" data-dismiss="modal">Annuler</button>
+    <button type="button" onclick="javascript:signature(); return false;" class="btn btn-success">Signer et valider le classeur</button>
 </div>
 
 
@@ -55,8 +55,7 @@
 </script>
 
 <script type="text/javascript">
-    var docstosign =
-    {{ docstosign|json_encode|raw }}
+    var docstosign = {{ docstosign|json_encode|raw }}
 
 
     var attributes = {width: 1, height: 1, id: "javaapplet"};
@@ -113,7 +112,8 @@
     //function donnant le chemin du fichier
     function getFileLinkFromNumber(i) {
 
-        document.javaapplet.setFileLinkFromNumber(i, Routing.generate('downloadAction', {'id': docstosign[i]}), docstosign[i].name);
+        alert('http://{{ servername }}/uploads/docs/'+docstosign[i].repourl);
+        document.javaapplet.setFileLinkFromNumber(i, 'http://{{ servername }}/uploads/docs/'+docstosign[i].repourl , docstosign[i].name);
 
 
     }
@@ -184,22 +184,18 @@
     //function permettant de signifier la fin du téléchargement d'un fichier
     function signature() {
 
-        var method = document.getElementById('selectmethod');
         var certif = document.getElementById('selectcertif');
         //alert('lancement signature '+method.value+'  '+certif.value);
-        if (document.signatureFORM.nbfic != undefined) {
-            nbfic = document.signatureFORM.nbfic.value;
-        }
-        else {
-            nbfic = 0;
-        }
+
+            nbfic = {{docstosign|length  }}
+
         if (nbfic > 0) {
             document.javaapplet.launchSigningWithCertificate(certif.value);
         }
         else {
             document.signatureFORM.submit();
         }
-        //document.javaapplet.launchSigningWithCertificate(par, 0);
+
     }
 
     //function permettant de signifier la fin du téléchargement d'un fichier
