--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,9 @@
                         <td>{{ user.username }}</td>
                         <td>{{ user.Nom }} {{ user.Prenom }}</td>
                         <td>
-                            <img src="{% if user.enabled %}{% else %}{% endif %}"/>
+                            <div class="active_inactive_user">{% if user.enabled %}
+                                    <span class="glyphicon glyphicon-ok"></span>{% else %}
+                                    <span class="glyphicon glyphicon-remove"></span>{% endif %}</div>
                         </td>
                         <td class="boutons_action">
                             <a href="{{ path("classeur_edit", {'id' : user.id }) }}">
