--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -6,16 +6,10 @@
     <div class="bloc_page">
         {% if classeur.isValidable(app.user.id) %}
             {% if classeur.isSignable(app.user.id) %}
-                <form class="form_action" id="signform">
+                <form class="form_action" id="signform" action="{{ path('signform',{'id':classeur.id}) }}">
                     <button type="submit" class="btn btn-success">Valider et Signer</button>
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
-                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div id='modalcontent' class="modal-content">
 
-                            </div><!-- /.modal-content -->
-                        </div><!-- /.modal-dialog -->
-                    </div><!-- /.modal -->
                 </form>
             {% else %}
                 <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
@@ -102,22 +96,7 @@
 
             $(document).ready(function () {
                 $('#documentcontent').load(Routing.generate('edit_document_for_classeur', {id: {{ classeur.id }}}));
-                $('#signform').submit(function(e){
-                    $.ajax('{{ path('signform', {'id':classeur.id}) }}',
-                            {
-                                method: 'GET',
-                                success: function (html) {
-                                    $('#modalcontent').html(html);
-                                    $('#myModal').modal({
-                                        backdrop: 'static'
-                                    });
-                                }
-                            }
-                    );
-                    e.preventDefault();
-                    e.stopImmediatePropagation();
-                    return false;
-                });
+
             });
 
             var nowTemp = new Date();
