--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -113,7 +113,7 @@
     function getFileLinkFromNumber(i) {
 
         alert('http://{{ servername }}/uploads/docs/'+docstosign[i].repourl);
-        document.javaapplet.setFileLinkFromNumber(i, 'http://{{ servername }}/uploads/docs/'+docstosign[i].repourl , docstosign[i].name);
+        document.javaapplet.setFileLinkFromNumber(i, 'http://{{ servername }}/uploads/docs/'+docstosign[i].repourl , docstosign[i].repourl);
 
 
     }
