--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -8,12 +8,12 @@
         </div>
         <table class="table tableau dtables">
             <thead>
-            <tr>
-                <th>Mail</th>
-                <th>Nom</th>
-                <th>Actif</th>
-                <th>Action</th>
-            </tr>
+                <tr>
+                    <th>Mail</th>
+                    <th>Nom</th>
+                    <th>Actif</th>
+                    <th>Action</th>
+                </tr>
             </thead>
             <tbody>
             {% for user in users %}
@@ -31,6 +31,25 @@
                         </a>
                         <a class="" href="#"{{ path("user_edit", {'id' : user.id }) }}">
                         <span class="glyphicon glyphicon-trash"></span>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+            {% for user in users %}
+                <tr class="user-row" data-id="{{ user.id }}">
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.Nom }} {{ user.Prenom }}</td>
+                    <td>
+                        <div class="active_inactive_user">{% if user.enabled %}
+                                <span class="glyphicon glyphicon-ok"></span>{% else %}
+                                <span class="glyphicon glyphicon-remove"></span>{% endif %}</div>
+                    </td>
+                    <td class="boutons_action">
+                        <a href="{{ path("user_edit", {'id' : user.id }) }}">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </a>
+                        <a href="{{ path("classeur_edit", {'id' : user.id }) }}">
+                            <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
                 </tr>
