--- a/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
@@ -1,7 +1,14 @@
 {% extends "SesileMainBundle:Default:index.html.twig" %}
 
 {% block content %}
-    <form action="{{ path('admin') }}" {{ form_enctype(form) }} method="POST">
-        {{ form_widget(form) }}
-    </form>
+    <div class="bloc_page">
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-cog"></span>
+            &nbsp;&nbsp;&nbsp;Administration
+        </div>
+        <form action="{{ path('admin') }}" {{ form_enctype(form) }} method="POST">
+            {{ form_label(form.msg) }}
+            {{ form_widget(form.msg) }}
+        </form>
+    </div>
 {% endblock %}
